--- a/musical/musicalStyle.css
+++ b/musical/musicalStyle.css
@@ -198,27 +198,93 @@ body {
   margin-bottom: 1.25rem;
 }
 
+.simply-scroll-clip {
+  width: 100vw;
+  height: 30rem;
+  overflow: hidden;
+  border-radius: 0.625rem;
+}
+
 .con02 ul {
   display: flex;
   gap: 0.625rem;
 }
 
 .con02 .list li {
-  width: 18.75rem;
-  height: 18.75rem;
+  /* border: 1px solid red; */
+  width: 300px;
+  height: 300px;
+  cursor: pointer;
+  flex-shrink: 0;
+  transition: 1s;
 }
-.con02 .list li img {
+.con02 .list li.on {
+  width: 500px;
+}
+.con02 li .imgWrap {
   width: 100%;
   height: 100%;
-  object-fit: cover;
   border-radius: 0.625rem;
-  transition: 0.1s;
-  cursor: pointer;
+  color: #fff;
+  position: relative;
 }
-.con02 .list li:hover img {
-  border: 3px solid rgb(255, 200, 72, 0.8);
-  box-sizing: border-box;
+
+.con02 li .imgWrap div {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.625rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 1s;
 }
+
+.con02 li .imgWrap .subtitle {
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translateY(-50%);
+  width: 200px;
+  opacity: 0;
+  transition: 1s;
+}
+.con02 li .imgWrap .click {
+  position: absolute;
+  bottom: 30px;
+  right: 30px;
+  opacity: 0;
+  transition: 1s;
+}
+
+.con02 li .imgWrap:hover div {
+  filter: brightness(0.35);
+}
+.con02 li .imgWrap:hover p {
+  opacity: 1;
+}
+.con02 li:nth-child(1) .imgWrap div {
+  background: url(images/img_sample01.jpg);
+}
+.con02 li:nth-child(2) .imgWrap div {
+  background: url(images/img_sample02.jpg);
+}
+.con02 li:nth-child(3) .imgWrap div {
+  background: url(images/img_sample03.jpg);
+}
+.con02 li:nth-child(4) .imgWrap div {
+  background: url(images/img_sample01.jpg);
+}
+.con02 li:nth-child(5) .imgWrap div {
+  background: url(images/img_sample02.jpg);
+}
+.con02 li:nth-child(6) .imgWrap div {
+  background: url(images/img_sample03.jpg);
+}
+
+.con02 li h3 {
+  margin: 10px 0px 0px 20px;
+}
+
 /*con03*/
 .con03 {
   width: 90%;
@@ -245,9 +311,17 @@ body {
   transition: 1s;
   position: sticky;
   top: 1.875rem;
-  box-shadow: 1px 1px 3px #333;
+  transition: 1s;
 }
 
+.con03 .card:hover {
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+  background-color: rgb(226, 226, 100);
+}
+.con03 .card.on {
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+  background-color: rgb(226, 226, 100);
+}
 .con03 .card .left,
 .con03 .card .imgWrap {
   width: 45%;
